src/main/java/com/example/cto/error/exceptions/InsufficientFundsException.java
package com.example.cto.error.exceptions;public class InsufficientFundsException {
}
